[gd_scene load_steps=6 format=3 uid="uid://c2jqsdm1nvtgs"]

[ext_resource type="Script" path="res://Scripts/Music.gd" id="1_by1lq"]
[ext_resource type="AudioStream" uid="uid://dmwsc1x4vo2an" path="res://Sounds/Songs/Something Wrong with my Dog.wav" id="2_fwqtn"]
[ext_resource type="AudioStream" uid="uid://cspj70s06u3ds" path="res://Sounds/Songs/Goblin_song_cut.wav" id="3_sge46"]
[ext_resource type="AudioStream" uid="uid://drijdpttwfm42" path="res://Sounds/Songs/Braidens_Song.wav" id="4_4anpt"]
[ext_resource type="AudioStream" uid="uid://bak01jar4pbkq" path="res://Sounds/Songs/golden_poop_song.mp3" id="4_isl0e"]

[node name="Music" type="Node2D"]
process_mode = 3
script = ExtResource("1_by1lq")

[node name="main_song_one" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_fwqtn")
volume_db = 3.0
bus = &"music"

[node name="main_song_two" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_sge46")
volume_db = 3.0
bus = &"music"

[node name="main_song_three" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4anpt")
volume_db = -10.0
bus = &"music"

[node name="gold_poop_song" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_isl0e")
volume_db = 1.0
bus = &"music"

[connection signal="finished" from="main_song_one" to="." method="_on_main_song_finished"]
[connection signal="finished" from="main_song_one" to="." method="_on_main_song_one_finished"]
[connection signal="finished" from="main_song_two" to="." method="_on_main_song_two_finished"]
[connection signal="finished" from="main_song_three" to="." method="_on_main_song_two_finished"]
[connection signal="finished" from="main_song_three" to="." method="_on_main_song_three_finished"]
[connection signal="finished" from="gold_poop_song" to="." method="_on_gold_poop_song_finished"]
